src/main/java/com/social/marketing/search/antlr4/QueryParser.java
package com.social.marketing.search.antlr4;// Generated from Query.g4 by ANTLR 4.13.2

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class QueryParser extends Parser {
    public static final int
            OP = 1, ONE_VALUE_FUNC = 2, NO_VALUE_FUNC = 3, MULTIPLE_VALUE_OP = 4, BOOL = 5,
            STRING = 6, AND = 7, OR = 8, NUMBER = 9, LPAREN = 10, RPAREN = 11, EQ = 12, NE = 13, GT = 14,
            GE = 15, LT = 16, LE = 17, CONTAINS = 18, CONTAINS_IGNORE_CASE = 19, STARTS_WITH = 20,
            STARTS_WITH_IGNORE_CASE = 21, ENDS_WITH = 22, ENDS_WITH_IGNORE_CASE = 23, NULL = 24,
            NOT_NULL = 25, EMPTY = 26, NOT_EMPTY = 27, IN = 28, NIN = 29, COMMA = 30, IDENTIFIER = 31,
            LineTerminator = 32, WS = 33;
    public static final int
            RULE_input = 0, RULE_query = 1, RULE_criteria = 2, RULE_key = 3, RULE_value = 4;
    public static final String[] ruleNames = makeRuleNames();
    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    public static final ATN _ATN =
            new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    private static final String[] _LITERAL_NAMES = makeLiteralNames();
    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    static {
        RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION);
    }

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }

    public QueryParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    private static String[] makeRuleNames() {
        return new String[]{
                "input", "query", "criteria", "key", "value"
        };
    }

    private static String[] makeLiteralNames() {
        return new String[]{
                null, null, null, null, null, null, null, "'and'", "'or'", null, "'('",
                "')'", "' eq '", "' ne '", "' gt '", "' ge '", "' lt '", "' le '", "'contains'",
                "'containsIgnoreCase'", "'startsWith'", "'startsWithIgnoreCase'", "'endsWith'",
                "'endsWithIgnoreCase'", "'null'", "'notNull'", "'empty'", "'notEmpty'",
                "' in '", "' nin '", "','"
        };
    }

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, "OP", "ONE_VALUE_FUNC", "NO_VALUE_FUNC", "MULTIPLE_VALUE_OP", "BOOL",
                "STRING", "AND", "OR", "NUMBER", "LPAREN", "RPAREN", "EQ", "NE", "GT",
                "GE", "LT", "LE", "CONTAINS", "CONTAINS_IGNORE_CASE", "STARTS_WITH",
                "STARTS_WITH_IGNORE_CASE", "ENDS_WITH", "ENDS_WITH_IGNORE_CASE", "NULL",
                "NOT_NULL", "EMPTY", "NOT_EMPTY", "IN", "NIN", "COMMA", "IDENTIFIER",
                "LineTerminator", "WS"
        };
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "Query.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public final InputContext input() throws RecognitionException {
        InputContext _localctx = new InputContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_input);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(10);
                query(0);
                setState(11);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final QueryContext query() throws RecognitionException {
        return query(0);
    }

    private QueryContext query(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        QueryContext _localctx = new QueryContext(_ctx, _parentState);
        QueryContext _prevctx = _localctx;
        int _startState = 2;
        enterRecursionRule(_localctx, 2, RULE_query, _p);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(19);
                _errHandler.sync(this);
                switch (_input.LA(1)) {
                    case LPAREN: {
                        _localctx = new PriorityQueryContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;

                        setState(14);
                        match(LPAREN);
                        setState(15);
                        query(0);
                        setState(16);
                        match(RPAREN);
                    }
                    break;
                    case ONE_VALUE_FUNC:
                    case NO_VALUE_FUNC:
                    case IDENTIFIER: {
                        _localctx = new AtomQueryContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;
                        setState(18);
                        criteria();
                    }
                    break;
                    default:
                        throw new NoViableAltException(this);
                }
                _ctx.stop = _input.LT(-1);
                setState(26);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 1, _ctx);
                while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            {
                                _localctx = new OpQueryContext(new QueryContext(_parentctx, _parentState));
                                ((OpQueryContext) _localctx).left = _prevctx;
                                pushNewRecursionContext(_localctx, _startState, RULE_query);
                                setState(21);
                                if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
                                setState(22);
                                ((OpQueryContext) _localctx).logicalOp = _input.LT(1);
                                _la = _input.LA(1);
                                if (!(_la == AND || _la == OR)) {
                                    ((OpQueryContext) _localctx).logicalOp = (Token) _errHandler.recoverInline(this);
                                } else {
                                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                                    _errHandler.reportMatch(this);
                                    consume();
                                }
                                setState(23);
                                ((OpQueryContext) _localctx).right = query(4);
                            }
                        }
                    }
                    setState(28);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 1, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public final CriteriaContext criteria() throws RecognitionException {
        CriteriaContext _localctx = new CriteriaContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_criteria);
        int _la;
        try {
            setState(58);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 3, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(29);
                    key();
                    setState(30);
                    match(OP);
                    setState(31);
                    value();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(33);
                    key();
                    setState(34);
                    match(MULTIPLE_VALUE_OP);
                    setState(35);
                    match(LPAREN);
                    setState(36);
                    value();
                    setState(41);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == COMMA) {
                        {
                            {
                                setState(37);
                                match(COMMA);
                                setState(38);
                                value();
                            }
                        }
                        setState(43);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(44);
                    match(RPAREN);
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(46);
                    match(NO_VALUE_FUNC);
                    setState(47);
                    match(LPAREN);
                    setState(48);
                    key();
                    setState(49);
                    match(RPAREN);
                }
                break;
                case 4:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(51);
                    match(ONE_VALUE_FUNC);
                    setState(52);
                    match(LPAREN);
                    setState(53);
                    key();
                    setState(54);
                    match(COMMA);
                    setState(55);
                    value();
                    setState(56);
                    match(RPAREN);
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final KeyContext key() throws RecognitionException {
        KeyContext _localctx = new KeyContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_key);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(60);
                match(IDENTIFIER);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ValueContext value() throws RecognitionException {
        ValueContext _localctx = new ValueContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_value);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(62);
                _la = _input.LA(1);
                if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & 2147484256L) != 0))) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public boolean sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
        switch (ruleIndex) {
            case 1:
                return query_sempred((QueryContext) _localctx, predIndex);
        }
        return true;
    }

    private boolean query_sempred(QueryContext _localctx, int predIndex) {
        switch (predIndex) {
            case 0:
                return precpred(_ctx, 3);
        }
        return true;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class InputContext extends ParserRuleContext {
        public InputContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public QueryContext query() {
            return getRuleContext(QueryContext.class, 0);
        }

        public TerminalNode EOF() {
            return getToken(QueryParser.EOF, 0);
        }

        @Override
        public int getRuleIndex() {
            return RULE_input;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof QueryListener) ((QueryListener) listener).enterInput(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof QueryListener) ((QueryListener) listener).exitInput(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof QueryVisitor) return ((QueryVisitor<? extends T>) visitor).visitInput(this);
            else return visitor.visitChildren(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class QueryContext extends ParserRuleContext {
        public QueryContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public QueryContext() {
        }

        @Override
        public int getRuleIndex() {
            return RULE_query;
        }

        public void copyFrom(QueryContext ctx) {
            super.copyFrom(ctx);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class AtomQueryContext extends QueryContext {
        public AtomQueryContext(QueryContext ctx) {
            copyFrom(ctx);
        }

        public CriteriaContext criteria() {
            return getRuleContext(CriteriaContext.class, 0);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof QueryListener) ((QueryListener) listener).enterAtomQuery(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof QueryListener) ((QueryListener) listener).exitAtomQuery(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof QueryVisitor) return ((QueryVisitor<? extends T>) visitor).visitAtomQuery(this);
            else return visitor.visitChildren(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class PriorityQueryContext extends QueryContext {
        public PriorityQueryContext(QueryContext ctx) {
            copyFrom(ctx);
        }

        public TerminalNode LPAREN() {
            return getToken(QueryParser.LPAREN, 0);
        }

        public QueryContext query() {
            return getRuleContext(QueryContext.class, 0);
        }

        public TerminalNode RPAREN() {
            return getToken(QueryParser.RPAREN, 0);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof QueryListener) ((QueryListener) listener).enterPriorityQuery(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof QueryListener) ((QueryListener) listener).exitPriorityQuery(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof QueryVisitor) return ((QueryVisitor<? extends T>) visitor).visitPriorityQuery(this);
            else return visitor.visitChildren(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class OpQueryContext extends QueryContext {
        public QueryContext left;
        public Token logicalOp;
        public QueryContext right;

        public OpQueryContext(QueryContext ctx) {
            copyFrom(ctx);
        }

        public List<QueryContext> query() {
            return getRuleContexts(QueryContext.class);
        }

        public QueryContext query(int i) {
            return getRuleContext(QueryContext.class, i);
        }

        public TerminalNode AND() {
            return getToken(QueryParser.AND, 0);
        }

        public TerminalNode OR() {
            return getToken(QueryParser.OR, 0);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof QueryListener) ((QueryListener) listener).enterOpQuery(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof QueryListener) ((QueryListener) listener).exitOpQuery(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof QueryVisitor) return ((QueryVisitor<? extends T>) visitor).visitOpQuery(this);
            else return visitor.visitChildren(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class CriteriaContext extends ParserRuleContext {
        public CriteriaContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public KeyContext key() {
            return getRuleContext(KeyContext.class, 0);
        }

        public TerminalNode OP() {
            return getToken(QueryParser.OP, 0);
        }

        public List<ValueContext> value() {
            return getRuleContexts(ValueContext.class);
        }

        public ValueContext value(int i) {
            return getRuleContext(ValueContext.class, i);
        }

        public TerminalNode MULTIPLE_VALUE_OP() {
            return getToken(QueryParser.MULTIPLE_VALUE_OP, 0);
        }

        public TerminalNode LPAREN() {
            return getToken(QueryParser.LPAREN, 0);
        }

        public TerminalNode RPAREN() {
            return getToken(QueryParser.RPAREN, 0);
        }

        public List<TerminalNode> COMMA() {
            return getTokens(QueryParser.COMMA);
        }

        public TerminalNode COMMA(int i) {
            return getToken(QueryParser.COMMA, i);
        }

        public TerminalNode NO_VALUE_FUNC() {
            return getToken(QueryParser.NO_VALUE_FUNC, 0);
        }

        public TerminalNode ONE_VALUE_FUNC() {
            return getToken(QueryParser.ONE_VALUE_FUNC, 0);
        }

        @Override
        public int getRuleIndex() {
            return RULE_criteria;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof QueryListener) ((QueryListener) listener).enterCriteria(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof QueryListener) ((QueryListener) listener).exitCriteria(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof QueryVisitor) return ((QueryVisitor<? extends T>) visitor).visitCriteria(this);
            else return visitor.visitChildren(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class KeyContext extends ParserRuleContext {
        public KeyContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public TerminalNode IDENTIFIER() {
            return getToken(QueryParser.IDENTIFIER, 0);
        }

        @Override
        public int getRuleIndex() {
            return RULE_key;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof QueryListener) ((QueryListener) listener).enterKey(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof QueryListener) ((QueryListener) listener).exitKey(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof QueryVisitor) return ((QueryVisitor<? extends T>) visitor).visitKey(this);
            else return visitor.visitChildren(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ValueContext extends ParserRuleContext {
        public ValueContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public TerminalNode IDENTIFIER() {
            return getToken(QueryParser.IDENTIFIER, 0);
        }

        public TerminalNode STRING() {
            return getToken(QueryParser.STRING, 0);
        }

        public TerminalNode NUMBER() {
            return getToken(QueryParser.NUMBER, 0);
        }

        public TerminalNode BOOL() {
            return getToken(QueryParser.BOOL, 0);
        }

        @Override
        public int getRuleIndex() {
            return RULE_value;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof QueryListener) ((QueryListener) listener).enterValue(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof QueryListener) ((QueryListener) listener).exitValue(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof QueryVisitor) return ((QueryVisitor<? extends T>) visitor).visitValue(this);
            else return visitor.visitChildren(this);
        }
    }
}